# PODO

./: .gitignore  .gitmessage  API_KEY_AUTH_GUIDE.md  CLAUDE.md  README.md  README_EN.md  RUNPOD_GUIDE.md  SETUP_GUIDE.md  netlify.toml
serving/api/: FEEDBACK_API.md  FEEDBACK_STATS_IMPLEMENTATION.md  README.md  check_db_data.py  main.py  pyproject.toml  requirements.txt
serving/api/config/: settings.py
serving/api/database/: db.py
serving/api/routers/: analysis.py  detect.py  feedback.py  images.py  monitoring.py  sessions.py  stats.py
serving/api/schemas/: schemas.py
serving/api/test/: check_db.py  dump_db.py  repro_defect_bug.py  send_test_data.py  test_feedback_api.py  test_feedback_stats.py  test_health_api.py  test_multi_defect.py
serving/api/utils/: auth.py  image_utils.py  s3_dataset.py  slack_notifier.py  vlm_analyzer.py
serving/edge/: README.md  UPDATER_MAIN_CHANGELOG.md  capture_background.py  config.py  inference_worker.py  main.py  metrics.py  model_manager.py  preprocessor.py  pyproject.toml  rtsp_receiver.py  scavenger_worker.py  test_artifact_download.py  test_filter_logic.py  test_update_cycle.sh  updater.py  upload_worker.py
serving/edge/benchmarks/: README.md  benchmark_runner.py  scenarios.sample.json
serving/edge/models/: current_version.json
training/: README.md  airflow.cfg  config.yaml  config_qat.yaml  evaluate_metrics.py  export_onnx_only.py  pyproject.toml  run_exp.py  start_airflow.sh  validate_qat_checkpoint.py  verify_qat.py
training/configs/: config.yaml  config_kd.yaml  config_qat.yaml
training/dags/: pcb_retrain.py
training/docs/: wandb_troubleshooting.md
training/mlruns/874743589013598681/: meta.yaml
training/scripts/: evaluate_metrics.py  export_qat.py  qat.py  recalibrate_ema.py  register_model.py  run_exp.py  run_kd_experiment.sh  schedule_experiments.py  sync_data.py  train_kd.py  train_qat.py
training/scripts/benchmark/: benchmark_utils.py  run_benchmark_all.py  train_rtdetr.py  train_torchvision.py
training/src/: inference.py  train.py  train_qat.py  train_qat_custom.py  utils.py
training/src/datasets/: dataset.py  torchvision_adapter.py
training/src/models/: qat_detection_trainer.py  yolov11m.py  yolov11n.py  yolov11s.py  yolov11x.py  yolov8m.py  yolov8n.py  yolov8s.py  yolov8s_qat.py
training/src/qat/: recalibrate.py  trainer.py  utils.py
training/src/quantization/: __init__.py  export_qat.py  qat_utils.py
training/src/utils/: general.py  torchvision_validator.py  torchvision_wrapper.py
training/wandb/: latest-run
training/wandb/offline-run-20260114_030022-rq7ue8xq/: run-rq7ue8xq.wandb
training/wandb/offline-run-20260114_031540-4dx1dpln/: run-4dx1dpln.wandb
training/wandb/offline-run-20260114_032301-umygasyi/: run-umygasyi.wandb
training/wandb/offline-run-20260114_050352-mf2bn19z/: run-mf2bn19z.wandb
training/wandb/offline-run-20260114_050436-tzuvdknq/: run-tzuvdknq.wandb
training/wandb/offline-run-20260114_051441-wjymbwrf/: run-wjymbwrf.wandb
training/wandb/offline-run-20260114_052402-xibr0h4v/: run-xibr0h4v.wandb
training/wandb/offline-run-20260114_052546-ahew9oln/: run-ahew9oln.wandb
training/wandb/offline-run-20260114_053011-12uuha8u/: run-12uuha8u.wandb
training/wandb/offline-run-20260114_053237-7hqq25iu/: run-7hqq25iu.wandb
training/wandb/offline-run-20260114_055543-aste3ehr/: run-aste3ehr.wandb
training/wandb/offline-run-20260114_060740-kjfaxdf6/: run-kjfaxdf6.wandb
training/wandb/offline-run-20260114_061232-q5ii079o/: run-q5ii079o.wandb
(+262 files in other folders)
