[project]
name = "test"
version = "0.1.0"
description = "PCB Defect Detection Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "aiosqlite",
    "pydantic",
    "requests>=2.32.5",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]
