[project]
name = "test"
version = "0.1.0"
description = "PCB Defect Detection Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "aiosqlite",
    "pydantic",
    "awscli>=1.44.29",
    "boto3>=1.42.39",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
