[project]
name = "edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.56",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ultralytics>=8.4.13",
]
